@@ -12,7 +12,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +27,7 @@ public class NoteExplainService {
     public List<NoteExplainResponseDTO> getExplanationsByNote(Long noteId) {
         return noteExplainRepository.findByNoteId(noteId).stream()
             .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     /**
